--- a/configuration/production.toml
+++ b/configuration/production.toml
@@ -3,3 +3,7 @@ host = "0.0.0.0"
 
 [database]
 require_ssl = true
+
+[email_client]
+base_url = "https://api.potmarkapp.com"
+sender_email = "masaru.ueki@itage.co.jp"
