--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ serde-aux = "3"
 unicode-segmentation = "1"
 validator = "0.14"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
+rand = { version = "0.8", features=["std_rng"] }
 
 [dependencies.sqlx]
 version = "0.5.7"
@@ -53,3 +54,4 @@ quickcheck_macros = "0.9.1"
 tokio = {version = "1", features = ["rt", "macros"] }
 wiremock = "0.5"
 serde_json = "1"
+linkify = "0.8"
